src/network_policies/test2monitoring-fluidos-consumer-792ecdf3922f3e6d8486c5f32dde209392dc3d93707196557d7211f9191f8c6f9171b2 Egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test2monitoring-fluidos-consumer-792ecdf3922f3e6d8486c5f32dde209392dc3d93707196557d7211f9191f8c6f9171b2
  namespace: monitoring-fluidos-consumer-792ecd
spec:
  policyTypes:
  - Egress
  podSelector:
    matchLabels:
      app: resource-monitor
  egress:
  - ports:
    - port: 80
      protocol: TCP
    to:
    - ipBlock:
        cidr: 142.250.0.0/15
